--- a/index.html
+++ b/index.html
@@ -1,22 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Janae</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-</head>
-<body>
-  <h1>Hello World</h1>
-  <h2>My name is Janae</h2>
-<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci error sint reprehenderit, quod ipsa tempore sequi nemo vero laborum! Ab quisquam sed iste nostrum et architecto laborum expedita? At, dolor!</p>
+  <head>
+    <title>Janae</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Document</title>
+  </head>
+  <body>
+    <header>
+      <h1>Hello World</h1>
+      <h2>My name is Janae</h2>
+    </header>
 
+    <nav></nav>
 
+    <main>
+      <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci error
+      sint reprehenderit, quod ipsa tempore sequi nemo vero laborum! Ab quisquam
+      sed iste nostrum et architecto laborum expedita? At, dolor!
+    </p>
 
-<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi magni non, exercitationem eius quo eum deserunt sunt soluta quae quam labore alias aut earum omnis at quibusdam dicta accusamus tempora.</p>
-<p>Voluptatem et dolor reiciendis suscipit, perferendis deleniti laborum itaque quia fugiat deserunt beatae adipisci aspernatur dolores sequi architecto nam animi unde asperiores aliquam accusantium ratione! Aut laudantium eveniet minima sed.</p>
-<p>Eaque sunt voluptatum quia facilis alias! Reiciendis beatae ad optio, officia praesentium quis tenetur modi debitis at nulla pariatur itaque illum, harum labore aliquid aliquam? Atque magnam dolore vitae praesentium.</p>
-
-</body>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi magni
+      non, exercitationem eius quo eum deserunt sunt soluta quae quam labore
+      alias aut earum omnis at quibusdam dicta accusamus tempora.
+    </p>
+    <p>
+      Voluptatem et dolor reiciendis suscipit, perferendis deleniti laborum
+      itaque quia fugiat deserunt beatae adipisci aspernatur dolores sequi
+      architecto nam animi unde asperiores aliquam accusantium ratione! Aut
+      laudantium eveniet minima sed.
+    </p>
+    <p>
+      Eaque sunt voluptatum quia facilis alias! Reiciendis beatae ad optio,
+      officia praesentium quis tenetur modi debitis at nulla pariatur itaque
+      illum, harum labore aliquid aliquam? Atque magnam dolore vitae
+      praesentium.
+    </p></main>
+  </body>
 </html>
