--- a/index.html
+++ b/index.html
@@ -13,7 +13,23 @@
       <h2>My name is Janae</h2>
     </header>
 
-    <nav></nav>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="">About</a></li>
+        <li><a href="">Contact</a></li>
+        <li>Portfolio
+
+            <ul>
+              <li><a href="">Project 1</a></li>
+              <li><a href="">Project 2</a></li>
+              <li><a href="">Project 3</a></li>
+            </ul>
+            </li>
+            </ul>
+
+
+    </nav>
 
     <main>
       <p>
