Build out page content and navigation

--- a/Projects/index.html
+++ b/Projects/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
   <header></header>
-  <nav></nav>
+  <h1>Projects</h1>
+  <nav>
+
+  </nav>
   <main></main>
   <footer></footer>
 
